# AssimpViewer

./: .gitignore  README.md  build.gradle  settings.gradle  settings.gradle.kts
app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts
app/src/androidTest/java/com/cw/assimpviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: base_skeletal_fragment_shader.glsl  base_skeletal_vertex_shader.glsl
app/src/main/cpp/: AssimpAndroid.cpp  native-lib.cpp
app/src/main/cpp/app/: AssimpApp.cpp  AssimpApp.h
app/src/main/cpp/assimp/: AssetManager.cpp  AssetManager.h  AssimpBaseFilter.cpp  AssimpBaseFilter.h  AssimpIndicesFilter.cpp  AssimpIndicesFilter.h  AssimpIndicesSkeletalFilter.cpp  AssimpIndicesSkeletalFilter.h  AssimpLooper.cpp  AssimpLooper.h  AssimpRenderer.cpp  AssimpRenderer.h  AssimpSkeletalFilter.cpp  AssimpSkeletalFilter.h  BaseRenderer.cpp  BaseRenderer.h  IAssmipFilter.cpp  IAssmipFilter.h  IFilter.cpp  IFilter.h  math_3d.cpp  math_3d.h  utils.cpp  utils.h  vecmath.h
app/src/main/cpp/base/: EGLCore.cpp  EGLCore.h  Looper.cpp  Looper.h  gl_utils.cpp  gl_utils.h  math_3d.cpp  math_3d.h  matrix_util.h  native_log.h  utils.cpp  utils.h
app/src/main/cpp/egl/: base_surface.cpp  base_surface.h  egl_core.cpp  egl_core.h  offscreen_surface.cpp  offscreen_surface.h  window_surface.cpp  window_surface.h
app/src/main/java/com/cw/assimpviewer/: AssimpApplication.kt  AssimpEngine.kt  AssimpSurfaceView.kt  MainActivity.kt  NativeAssimpView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cw/assimpviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
